    + [ADB] Correctly match alternative dependency templates in symbols
      files which specify an unversioned dependency.
  * checks/standards-version:
    + [FL] Avoid Perl warning if only the timestamp could not be parsed.

  * collection/objdump-info:
    + [ADB] Correctly parse a readelf symbol version block containing the
      definition of a single symbol.

  * frontend/lintian:
    + [FL] Do not try to use fail() before the lintian libraries are
      loaded.
    + [JP] Allow tags from the "lintian" checkset to be specified with --tags.
  
  * lib/manual_refs:
    + [JP] Regenerate with new manual_refs_update.pl script.
      (Closes: #493660)
  * lib/Read_taginfo.pm, lib/Manual_refs.pm:
    + [JP] Add support for new manuals, allow specifying manual
      sections by id and not only by section number.
    + [JP] Link manpages to manpages.debian.net.
  
  * private/manual_refs_update.pl:
    + [JP] Add support for many more manuals (FHS, debconf-spec,
      {menu,python,perl}-policy, libpkg-guide).

 --

lintian (1.24.3) unstable; urgency=low
  
  The "greetings from Argentina" release.

  * checks/binaries:
    + [ADB] Use Lintian::Collect throughout rather than reparsing file-info
      and objdump-info.
  * checks/changelog-file{,.desc}:
    + [ADB] Use Lintian::Collect instead of reading the fields/*, file-info
      and objdump-info files.
    + [ADB] Remove a misplaced word from the description of the tag
      "debian-changelog-file-contains-invalid-email-address".
  * checks/copyright-file{,.desc}:
    + [ADB] Drop the "copyright line too long" check.  Most of the issues
      it flags aren't easily fixable, particularly where the copyright file
      is (semi)automatically generated.  (Closes: #491302, #491365, #491685)
    + [ADB] Use Lintian::Collect for accessing control fields and reading the
      list of files in the package.
    + [ADB] Don't flag use of version 1 of the GPL, or licenses using phrases