@@ -42,6 +42,9 @@ lintian (1.24.4) UNRELEASED; urgency=low
     + [ADB] Correctly parse a readelf symbol version block containing the
       definition of a single symbol.
 
+  * debian/rules:
+    + [FL] Use $(PERL) instead of a hardcoded path.
+  
   * frontend/lintian:
     + [FL] Do not try to use fail() before the lintian libraries are
       loaded.
